2010-12-18  Ben Abbott  <bpabbott@mac.com>

	* plot/view.m: Return azimuth and elevation for nargin == 0.

2010-10-28  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, sparse/module.mk, deprecated/sphcat.m,
	deprecated/spvcat.m: Deprecate sphcat and spvcat functions.

2010-12-17  John W. Eaton  <jwe@octave.org>

	* plot/comet3.m: New function.
	* plot/module.mk: Add comet3.m to the list
	* miscellaneous/unimplemented.m: Remove comet3 from the list.

2010-12-17  John W. Eaton  <jwe@octave.org>

	* plot/comet.m: Use __plt_get_axis_arg__ to extract axis
	argument.  Only switch to specified axis temporarily.

2010-12-16  Ben Abbott <bpabbott@mac.com>

	* miscellaneous/unimplemented.m: Remove isprop() form list of
	unimplemented functions.
	* plot/isprop.m: New function.

2010-12-16  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Fix indexing error in sqp bounds selection. 

2010-12-14  Doug Stewart <doug.dastew@gmail.com>

	* plot/bar.m: Improve the docstring.

2010-12-14  John W. Eaton  <jwe@octave.org>

	* plot/private/__quiver__.m: Use high contrast color black for arrows
	in quiver3 plots.  Bug #31802.

2010-12-14  Rik  <octave@nomad.inbox5.com>

	* plot/compass.m, plot/errorbar.m, plot/legend.m, plot/rose.m, 
	plot/scatter.m, plot/scatter3.m, plot/stairs.m: Assign data used in 
	demo plots for reproducibility between runs.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/median.m: Add NaN test case from bug #29930.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* general/isequalwithequalnans.m: Add test case from bug #31239.

2010-12-13  Ben Abbott  <bpabbott@mac.com>

	* plot/__print_parse_opts__.m: Fix indexing bug for varargin.
	Bug #31862.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/distributions/betapdf.m: Add test for large values of
	alpha and beta.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* strings/strmatch.m: Add test with null search pattern.

2010-12-13 Doug Stewart  <doug.dastew@gmail.com>
